<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/about_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.AboutActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AppBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.Toolbar"
            app:title="@string/app_name" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:foregroundGravity="top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:contentDescription="@string/app_icon"
                android:src="@mipmap/ic_launcher_round" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="@dimen/material_drawer_account_header_title"
                android:textStyle="bold" />

            <!--suppress AndroidDomInspection -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/versionName" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_rate"
                style="@style/AboutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rate_app" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_webpage"
                style="@style/AboutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/visit_webpage" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_contact"
                style="@style/AboutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_us" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_licenses"
                style="@style/AboutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/licenses" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_github"
                style="@style/AboutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_code_on_github" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="4dp"
                android:text="@string/created_by"
                android:textAlignment="center" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>