<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FinderActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/weather_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                style="@style/WeatherCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:animateLayoutChanges="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/weather_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp">

                        <ImageView
                            android:id="@+id/thermometer_image"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_alignParentStart="true"
                            android:layout_marginEnd="16dp"
                            android:contentDescription="@string/app_name"
                            android:padding="2dp"
                            android:src="@drawable/ic_thermometer_simple"
                            app:tint="?android:attr/textColorPrimary" />

                        <TextView
                            android:id="@+id/temperature_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/thermometer_image"
                            android:text="@string/weather_temperature"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="?android:attr/textColorPrimary" />

                        <TextView
                            android:id="@+id/temperature_min_max_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/temperature_text"
                            android:layout_toEndOf="@id/thermometer_image"
                            android:text="@string/weather_temperature_min_max"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="?android:attr/textColorPrimary" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp">

                        <ImageView
                            android:id="@+id/humidity_image"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_alignParentStart="true"
                            android:layout_marginEnd="16dp"
                            android:contentDescription="@string/app_name"
                            android:padding="3dp"
                            android:src="@drawable/ic_drop"
                            app:tint="?android:attr/textColorPrimary" />

                        <TextView
                            android:id="@+id/humidity_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/humidity_image"
                            android:text="@string/weather_humidity"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="?android:attr/textColorPrimary" />

                        <TextView
                            android:id="@+id/humidity_min_max_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/humidity_text"
                            android:layout_toEndOf="@id/humidity_image"
                            android:text="@string/weather_humidity_min_max"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="?android:attr/textColorPrimary" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp">

                        <ImageView
                            android:id="@+id/rain_image"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_alignParentStart="true"
                            android:layout_marginEnd="16dp"
                            android:contentDescription="@string/app_name"
                            android:padding="3dp"
                            android:src="@drawable/ic_cloud_rain"
                            app:tint="?android:attr/textColorPrimary" />

                        <TextView
                            android:id="@+id/rain_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@id/rain_image"
                            android:text="@string/weather_rain"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="?android:attr/textColorPrimary" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp">

                        <ImageView
                            android:id="@+id/wind_speed_image"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_alignParentStart="true"
                            android:layout_marginEnd="16dp"
                            android:contentDescription="@string/app_name"
                            android:padding="5dp"
                            android:src="@drawable/ic_wind"
                            app:tint="?android:attr/textColorPrimary" />

                        <TextView
                            android:id="@+id/wind_speed_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/wind_speed_image"
                            android:text="@string/weather_wind_speed_kmh"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="?android:attr/textColorPrimary" />

                        <TextView
                            android:id="@+id/wind_speed_max_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/wind_speed_text"
                            android:layout_toEndOf="@id/wind_speed_image"
                            android:text="@string/weather_wind_speed_kmh"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="?android:attr/textColorPrimary" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp">

                        <ImageView
                            android:id="@+id/wind_direction_image"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_alignParentStart="true"
                            android:layout_marginEnd="16dp"
                            android:contentDescription="@string/app_name"
                            android:padding="3dp"
                            android:src="@drawable/ic_compass"
                            app:tint="?android:attr/textColorPrimary" />

                        <TextView
                            android:id="@+id/wind_direction_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@id/wind_direction_image"
                            android:text="@string/weather_rain"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="?android:attr/textColorPrimary" />
                    </RelativeLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>